--- a/dbpxy-spring-web/src/test/resources/application-integration.yml
+++ b/dbpxy-spring-web/src/test/resources/application-integration.yml
@@ -1,8 +1,8 @@
 app:
-  db-proxy:
+  dbpxy:
     hostname: localhost
     port: 9090
-  db-proxy-datasource:
+  dbpxy-datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     props:
       user: postgres
