--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
     entrypoint: mvn
     args: ['install', '-T', '2C', '-q', '-Dmaven.test.skip=true', '-Drevision=${_VERSION}']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--rm', '--tag=${_GCP_REGION}-docker.pkg.dev/${_GCP_PROJECT_ID}/${_DOCKER_REPOSITORY}/${_DOCKER_IMAGE}:${_VERSION}', '-f', './dbpxy/Dockerfile', './dbpxy']
+    args: ['build', '--rm', '--tag=${_GCP_REGION}-docker.pkg.dev/${_GCP_PROJECT_ID}/${_DOCKER_REPOSITORY}/dbpxy:${_VERSION}', '-f', './dbpxy/Dockerfile', './dbpxy']
 artifacts:
   mavenArtifacts:
     - repository: 'https://${_GCP_REGION}-maven.pkg.dev/${_GCP_PROJECT_ID}/${_MAVEN_REPOSITORY}'
@@ -12,4 +12,4 @@ artifacts:
       artifactId: 'dbpxy-lib'
       version: '${_VERSION}'
 images:
-  - '${_GCP_REGION}-docker.pkg.dev/${_GCP_PROJECT_ID}/${_DOCKER_REPOSITORY}/${_DOCKER_IMAGE}:${_VERSION}'
+  - '${_GCP_REGION}-docker.pkg.dev/${_GCP_PROJECT_ID}/${_DOCKER_REPOSITORY}/dbpxy:${_VERSION}'
