--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -60,7 +60,7 @@ jobs:
         with:
           go-version: '1.25'
       - name: Snyk test
-        run: snyk test --severity-threshold=high
+        run: snyk test --all-projects --severity-threshold=high -d
         env:
           SNYK_TOKEN: ${{steps.secret-manager.outputs.snyk-token}}
 
