--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
         env:
           CACHE_NAME: cache-m2-repository
         with:
-          path: ~/.m2/repository
+          path: /home/runner/.m2/repository
           key: ${{runner.os}}-build-${{env.CACHE_NAME}}-${{hashFiles('**/pom.xml')}}
           restore-keys: ${{runner.os}}-build-${{env.CACHE_NAME}}-
       # end
@@ -60,7 +60,9 @@ jobs:
         with:
           go-version: '1.25'
       - name: Snyk test
-        run: snyk test --all-projects --severity-threshold=high -d
+        run: |
+          chmod +x ./mvnw
+          snyk test --all-projects --severity-threshold=high -d
         env:
           SNYK_TOKEN: ${{steps.secret-manager.outputs.snyk-token}}
 
