--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,17 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v5
 
-      # begin package manager cache
+      # begin build tool & cache
+      - name: Setup JDK
+        uses: actions/setup-java@v5
+        with:
+          java-version: '25'
+          distribution: corretto
+          architecture: x64
+      - name: Setup Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: '1.25'
       - name: .m2/repository cache
         uses: actions/cache@v4
         env:
@@ -38,13 +48,6 @@ jobs:
             maven-repository:projects/${{secrets.GCP_PROJECT_ID}}/locations/${{secrets.GCP_REGION}}/secrets/MAVEN_REPOSITORY
             snyk-token:projects/${{secrets.GCP_PROJECT_ID}}/locations/${{secrets.GCP_REGION}}/secrets/SNYK_TOKEN
 
-      - name: Setup JDK
-        uses: actions/setup-java@v5
-        with:
-          java-version: '25'
-          distribution: corretto
-          architecture: x64
-
       - name: Set app version
         run: echo "APP_VERSION=$(cat version-dev.txt | tr -d \"[:space:]\")" >> $GITHUB_ENV
 
@@ -55,14 +58,10 @@ jobs:
 
       - name: Setup Snyk
         uses: snyk/actions/setup@master
-      - name: Setup Go
-        uses: actions/setup-go@v6
-        with:
-          go-version: '1.25'
       - name: Snyk test
         run: |
           chmod +x ./mvnw
-          snyk test --all-projects --severity-threshold=high -d
+          snyk test --all-projects --severity-threshold=high
         env:
           SNYK_TOKEN: ${{steps.secret-manager.outputs.snyk-token}}
 
@@ -76,7 +75,7 @@ jobs:
         env:
           CERTS_DIR: ./dbpxy/src/main/resources/certs
       - name: Build
-        run: mvn test -T 2C -Drevision=$APP_VERSION
+        run: mvn test -Drevision=$APP_VERSION
       # end
 
       - name: Clean up
