--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Snyk test
         run: |
           chmod +x ./mvnw
-          snyk test --all-projects --severity-threshold=high
+          snyk test --all-projects --dev --severity-threshold=high
         env:
           SNYK_TOKEN: ${{steps.secret-manager.outputs.snyk-token}}
 
