--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,3 @@
-serviceAccount: projects/${_GCP_PROJECT_ID}/serviceAccounts/${_GCP_SVC_ACCOUNT}
 steps:
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: bash
@@ -32,3 +31,6 @@ availableSecrets:
       env: GRPC_KEY_PEM
     - versionName: projects/${_GCP_PROJECT_ID}/secrets/GRPC_CERT_PEM/versions/1
       env: GRPC_CERT_PEM
+serviceAccount: projects/${_GCP_PROJECT_ID}/serviceAccounts/${_GCP_SVC_ACCOUNT}
+options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
