--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,7 +1,13 @@
+.git/
 .github/
 .idea/
 .mvn/
 mvnw*
+.env-template
+.gitignore
+LICENSE.txt
+README.md
+gha-creds-*.json
 *.sh
 **/.env
 **/*.drawio
