--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,7 +1,15 @@
-.github
-.idea
-.mvn
-.env
-*.drawio
+.git/
+.github/
+.idea/
+.mvn/
 mvnw*
+.env-template
+.gitignore
+LICENSE.txt
+README.md
+gha-creds-*.json
 *.sh
+**/.env
+**/*.drawio
+**/*.pem
+**/*.cnf
