--- a/dbpxy/Dockerfile
+++ b/dbpxy/Dockerfile
@@ -3,4 +3,4 @@ FROM bellsoft/liberica-runtime-container:jre-25-musl
 WORKDIR /appbin
 COPY target/*-app.jar app.jar
 ENTRYPOINT ["java"]
-CMD ["-jar", "./app.jar"]
+CMD ["-jar", "app.jar"]
