--- a/dbpxy/pom.xml
+++ b/dbpxy/pom.xml
@@ -220,6 +220,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <source>${basedir}/target/generated-sources/protobuf/grpc-java</source>
                                 <source>${basedir}/target/generated-sources/protobuf/java</source>
                             </sources>
                         </configuration>
